completed fixed aligning of job search

--- a/frontend/src/pages/styles/JobSearch.scss
+++ b/frontend/src/pages/styles/JobSearch.scss
@@ -43,7 +43,7 @@ input:focus {
 
 .checkboxes {
   text-align: left;
-  max-width: 700px;
+  min-width: 250px;
 }
 
 .checkboxes svg {
